2005-02-09  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.[ch]
	* libgimpwidgets/gimpwidgets.def: added new function
	gimp_size_entry_set_activates_default().

	* app/dialogs/image-new-dialog.c: set the initial focus on the
	Width entry and set the activates_default flag for the size entry.
	Fixes bug #165748.

2005-02-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpscalecombobox.[ch]
	* app/display/gimpstatusbar.c: pass an action label to
	gimp_scale_combo_box_add_action().

2005-02-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpscalecombobox.c: fixed brokeness introduced by
	the latest changes.

2005-02-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpscalecombobox.[ch]
	* app/display/gimpstatusbar.c: add an "Other..." item to the scale
	menu in the image window. Somewhat hackish but fixes bug #143747.

2005-02-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimagefile.c
	* app/widgets/gimpthumbbox.c: enable explicit (not automatic while
	browsing the list of files) thumbnailing of remote files

2005-02-08  Sven Neumann  <sven@gimp.org>

	* app/app_procs.[ch]
	* app/gui/gui.[ch]
	* app/main.c: simplified initialization by passing GOptionContext
	to app_libs_init() and gui_libs_init().

2005-02-08  Michael Natterer  <mitch@gimp.org>

	* app/main.c: removed SIGCHLD handler which used to call
	waitpid(-1,...) because this breaks all waitpid(pid,...) calls
	in a non-deterministic way. Apparently it is possible to use both
	SIG_DFL *and* SA_RESTART (SA_RESTART being the original reason
	why the call to sigaction() was introduced).

	* app/plug-in/plug-in.c (plug_in_close): don't have a million
	subsequent if(plug_in->pid) blocks. Put everything into one big
	if(plug_in->pid) block instead. Call g_spawn_close_pid() on all
	platforms instead of using the Win32 CloseHandle().

2005-02-08  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-actions.c
	* app/actions/image-actions.c
	* app/actions/qmask-actions.c